# orynth-v2

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  COMMANDS.md  LICENSE  Makefile  PLAN.md  QUICKSTART.md  README.md  WORKFLOW.md  orynth.repos  swarm_gazebo_keyboard.txt  teleop.txt
.github/workflows/: docker_build.yml  lint.yml  sitl_smoke.yml  unit.yml
config/ardupilot_params/: README.md  demo_common.parm  drone_0.parm  drone_1.parm  drone_2.parm  drone_3.parm  drone_4.parm
config/models/: manifest.yaml
config/networks/: cyclonedds_drone_template.xml  cyclonedds_local_only.xml  zenoh_uplink.json5
config/udev/: 99-orynth-rfd900.rules
docker/: base.Dockerfile  compose.demo.yaml  compose.dev.yaml  compose.hw.yaml  compose.swarm.gui.yaml  compose.swarm.yaml  dev.Dockerfile  entrypoint.sh  requirements.txt  sitl-params.parm  sitl.Dockerfile
docs/: WALKTHROUGH.md
docs/adr/: 0001-ros-humble-jetpack6.md  0002-mavros-over-ap-dds-for-now.md  0003-gazebo-harmonic-ardupilot-gz.md  0004-cyclone-dds-plus-zenoh-edge.md  0005-fast-lio2-leader-rtabmap-followers.md  0006-yolov8-tensorrt-isaac-ros.md  0007-version-pinning-policy.md  0008-leader-follow-demo-integration.md  0009-mavlink-radio-supersedes-dds-intra-swarm.md
docs/architecture/: overview.md
docs/architecture/end_to_end/: README.md  end_to_end_setup.tex
docs/migration/: radio_link_migration_plan.md
docs/runbooks/: first_flight.md  intermediary_tests.md  jetson_swarm_operations.md  radio_bench_tests.md  radio_link_bringup.md  sitl_swarm_dev.md
docs/runbooks/bringup_sequence/: README.md  bringup_sequence.aux  bringup_sequence.out  bringup_sequence.tex  bringup_sequence.toc
ros2_ws/src/swarm_behaviors/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_bringup/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_bringup/config/: demo.json  operator.json
ros2_ws/src/swarm_bringup/launch/: hw_drone.launch.py  sitl_single.launch.py  sitl_swarm.launch.py
ros2_ws/src/swarm_control/: package.xml  setup.py
ros2_ws/src/swarm_control/swarm_control/: formation.py  leader_keyboard.py  mavros_adapter.py  sitl_mission.py  swarm_api.py  swarm_server_node.py  vehicle_adapter.py
ros2_ws/src/swarm_control/test/: test_formation.py  test_mavros_adapter.py  test_swarm_api.py  test_swarm_server.py
ros2_ws/src/swarm_gcs/: package.xml  setup.py
ros2_ws/src/swarm_hardware/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_mapping/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_msgs/action/: FlySwarmMission.action  SearchArea.action
ros2_ws/src/swarm_msgs/msg/: DetectionWithGeo.msg  DroneState.msg  SwarmStatus.msg
ros2_ws/src/swarm_msgs/srv/: AssignSearchArea.srv  FollowLeader.srv  ManualGoto.srv  SetFormation.srv  SwarmTakeoff.srv
ros2_ws/src/swarm_navigation/: CMakeLists.txt  package.xml
ros2_ws/src/swarm_perception/: package.xml  setup.py
ros2_ws/src/swarm_perception/launch/: perception.launch.py
ros2_ws/src/swarm_perception/swarm_perception/: yolo_detector_node.py
ros2_ws/src/swarm_perception/test/: test_yolo_detector.py
ros2_ws/src/swarm_radio/: package.xml  setup.cfg  setup.py
ros2_ws/src/swarm_radio/swarm_radio/: dialect.py  radio_bridge_node.py  radio_link.py
ros2_ws/src/swarm_radio/test/: test_radio_link.py
ros2_ws/src/swarm_sim/: package.xml  setup.py
ros2_ws/src/swarm_sim/models/: README.md
ros2_ws/src/swarm_sim/swarm_sim/: sitl_launcher.py  world_builder.py
ros2_ws/src/swarm_sim/test/: test_swarm_sim.py
scripts/bringup/: demo_companion.sh  demo_swarm.sh  leaderfollow_sitl.sh  sitl_companion.sh  sitl_swarm.sh  swarm_companion.sh  swarm_sim.sh
scripts/ci/: run_sitl_smoke.sh  wait_for_mavros.sh
scripts/demo/: demo_cheatsheet.md  presentation_demo.sh
scripts/hardware/: README.md  fc_link_test.py  mavros_link_check.sh  motor_test.py  radio_chat.py  radio_motor_responder.py  radio_motor_test.py
