<?xml version="1.0"?>
<package format="3">
  <name>swarm_behaviors</name>
  <version>0.1.0</version>
  <description>BehaviorTree.CPP plugins + XML trees orchestrating swarm missions.</description>
  <maintainer email="dev.markovic@protonmail.com">Nikola Markovic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>behaviortree_cpp</depend>
  <depend>swarm_msgs</depend>
  <depend>mavros_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
