<?xml version="1.0"?>
<package format="3">
  <name>swarm_bringup</name>
  <version>0.1.0</version>
  <description>Launch files, per-drone params, world configs for SITL/HIL/field.</description>
  <maintainer email="dev.markovic@protonmail.com">Nikola Markovic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  <exec_depend>swarm_control</exec_depend>
  <exec_depend>swarm_perception</exec_depend>
  <exec_depend>swarm_sim</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
