<?xml version="1.0"?>
<package format="3">
  <name>swarm_navigation</name>
  <version>0.1.0</version>
  <description>Nav2 params + 3D planner integration for per-drone local avoidance.</description>
  <maintainer email="dev.markovic@protonmail.com">Nikola Markovic</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_common</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
